base_lib, biomes, player model I created a base library for simple shared code. I started to extract the code for biomes and closely related content form default. I created an extended player model.

--- a/mods/farming/base_soil/mod.conf
+++ b/mods/farming/base_soil/mod.conf
@@ -1,4 +1,4 @@
 name = base_soil
 description = Minebase mod: Base Soil
-depends = default, farming_api
+depends = base_biomes, default, farming_api
 optional_depends = 
