grasses, small changes I continued to refactor the code for grasses. I also made small fixes to liquids and earth.

--- a/mods/grasses/base_grasses/mod.conf
+++ b/mods/grasses/base_grasses/mod.conf
@@ -1,3 +1,3 @@
 name = base_grasses
 description = Minebase mod: Base Grasses
-depends = default, grasses_api
+depends = default, grasses_api, base_earth, base_biomes
