--- a/mods/farming/cotton/mod.conf
+++ b/mods/farming/cotton/mod.conf
@@ -1,4 +1,4 @@
 name = cotton
 description = Minebase mod: Cotton
-depends = default, wool, farming_api, trees_api
+depends = default, wool, farming_api, trees_api, base_grasses
 optional_depends = dungeon_loot
