--- a/mods/farming/wheat/mod.conf
+++ b/mods/farming/wheat/mod.conf
@@ -1,4 +1,4 @@
 name = wheat
 description = Minebase mod: Wheat
-depends = default, farming_api, trees_api
+depends = default, farming_api, trees_api, base_grasses
 optional_depends = dungeon_loot, stairs
