biomes, names, grass, hydrophytes The definition of multiple biomes was fixed. Multiple instances of names were updated. Grass names have been improved. I started to extract the code for hydrophytes from default.

--- a/mods/flowers/flower_api/mod.conf
+++ b/mods/flowers/flower_api/mod.conf
@@ -1,3 +1,3 @@
 name = flowers_api
 description = Minebase mod: Flowers API
-depends = default, trees_api
+depends = default, trees_api, base_earth, base_biomes
