--- a/mods/butterflies/mod.conf
+++ b/mods/butterflies/mod.conf
@@ -1,3 +1,3 @@
 name = butterflies
 description = Minebase mod: Butterflies
-depends = default, flowers_api
+depends = default, flowers_api, base_earth, base_biomes
