--- a/mods/fireflies/mod.conf
+++ b/mods/fireflies/mod.conf
@@ -1,3 +1,3 @@
 name = fireflies
 description = Minebase mod: Fireflies
-depends = default, vessels
+depends = default, vessels, base_earth, base_biomes
