--- a/mods/farming/base_hoes/mod.conf
+++ b/mods/farming/base_hoes/mod.conf
@@ -1,4 +1,4 @@
 name = base_hoes
 description = Minebase mod: Base Hoes
-depends = default, farming_api
+depends = default, farming_api, base_ores
 optional_depends = 
