--- a/mods/containers/bones/mod.conf
+++ b/mods/containers/bones/mod.conf
@@ -1,3 +1,3 @@
 name = bones
 description = Minebase mod: Bones
-depends = default, base_sounds, containers_api
+depends = base_sounds, containers_api
