--- a/mods/flowers/flower_api/mod.conf
+++ b/mods/flowers/flower_api/mod.conf
@@ -1,3 +1,3 @@
 name = flowers_api
 description = Minebase mod: Flowers API
-depends = default, trees_api, base_earth, base_biomes
+depends = trees_api, base_earth, base_biomes
