functions.txt, prepended formspec, base_protection, beds, aliases, bugnet The type of function in base and beds are listed now. The prepended formspec has been adapted to the new formating. The functions of base_protection have been refactored. I changed the names of the textures for beds. I also refactored the functions of beds. I created aliases for the screwdriver and the mapping kit. An optional dependency to the farming_api was not correctly spelled, I fixed it.

--- a/mods/pterygota/fireflies/mod.conf
+++ b/mods/pterygota/fireflies/mod.conf
@@ -1,4 +1,4 @@
 name = fireflies
 description = Minebase mod: Fireflies
 depends = base_earth, base_biomes, pterygota_api
-optional_depends = base_trees, farming, vessels, glass_sounds
+optional_depends = base_trees, farming_api, vessels, glass_sounds
