--- a/mods/sfinv/sfcraftguide/mod.conf
+++ b/mods/sfinv/sfcraftguide/mod.conf
@@ -1,3 +1,3 @@
 name = sfcraftguide
 description = Minebase mod: sfCraftguide
-depends = sfinv_api, base_ores
+depends = sfinv_api, base_ores, formspecs
