Creative, Doors, custom attributes I refactored Creative, Containers and Doors. I started to mark custom attributes with a leading _.

--- a/mods/maps/mod.conf
+++ b/mods/maps/mod.conf
@@ -1,4 +1,4 @@
 name = maps
 description = Minebase mod: Maps
-depends = dye, base_ores, base_glass, base_books
+depends = dye, base_ores, base_glass, base_books, creative
 optional_depends = base_trees
