--- a/mods/flowers/flowers_api/mod.conf
+++ b/mods/flowers/flowers_api/mod.conf
@@ -1,3 +1,3 @@
 name = flowers_api
 description = Minebase mod: Flowers API
-depends = tree_sounds, base_earth, base_biomes
+depends = tree_sounds, base_earth, base_biomes, creative
