--- a/mods/hydrophytes/hydrophytes_api/mod.conf
+++ b/mods/hydrophytes/hydrophytes_api/mod.conf
@@ -1,3 +1,3 @@
 name = hydrophytes_api
 description = Minebase mod: Hydrophytes API
-depends = earth_sounds, base_earth
+depends = earth_sounds, base_earth, creative
