--- a/mods/pterygota/fireflies/mod.conf
+++ b/mods/pterygota/fireflies/mod.conf
@@ -1,4 +1,4 @@
 name = fireflies
 description = Minebase mod: Fireflies
-depends = base_earth, base_biomes, pterygota_api
+depends = base_earth, base_biomes, pterygota_api, creative
 optional_depends = base_trees, farming_api, vessels, glass_sounds
