Dungeon Loot, use_texture_alpha, creative digging, rand I improved the code for Dungeon Loot. There is no hidden randomness anymore. Minetest 5.4 supports use_texture_alpha, I turned them on again. Creative digging times are fast again. I added the mod rand that has useful function for randomness.

--- a/mods/doors/doors_api/mod.conf
+++ b/mods/doors/doors_api/mod.conf
@@ -1,4 +1,4 @@
 name = doors_api
 description = Minebase mod: Doors API
-depends = tree_sounds, base, permissions_api, creative
+depends = tree_sounds, base, permissions_api
 optional_depends = screwdrivers
