--- a/mods/farming/farming_api/mod.conf
+++ b/mods/farming/farming_api/mod.conf
@@ -1,4 +1,4 @@
 name = farming_api
 description = Minebase mod: Farming API
-depends = tree_sounds, earth_sounds, tools_api, base_sounds, creative
+depends = tree_sounds, earth_sounds, tools_api, base_sounds
 optional_depends = base_trees
