--- a/mods/fire/base_fire/mod.conf
+++ b/mods/fire/base_fire/mod.conf
@@ -1,3 +1,3 @@
-name = base_fire
+name = base_fire 
 description = Minebase mod: Base Fire
-depends = base_ores, fire_api, tools_api, base_earth, creative
+depends = base_ores, fire_api, tools_api, base_earth
