random, refactoring, biomes The code mostly uses rand for random number generation now. I continued to refactor mods. A bug in biomes was fixed.

--- a/mods/mounts/lib_mount/mod.conf
+++ b/mods/mounts/lib_mount/mod.conf
@@ -1,3 +1,4 @@
 name = lib_mount
-depends = players_api
 description = Minebase Mod: Lib Mount - An API framework for mounting objects.
+depends = players_api, rand
+
