--- a/mods/containers/bones/mod.conf
+++ b/mods/containers/bones/mod.conf
@@ -1,3 +1,3 @@
 name = bones
 description = Minebase mod: Bones
-depends = base_sounds, containers_api, earth_sounds
+depends = base_sounds, containers_api, earth_sounds, rand
