--- a/minetest.conf.example
+++ b/minetest.conf.example
@@ -40,8 +40,7 @@
 
 # Whether the stuff in initial_stuff should be given to new players.
 #give_initial_stuff = false
-#initial_stuff = default:pick_steel,default:axe_steel,default:shovel_steel,
-default:torch 99,default:cobble 99
+#initial_stuff = base_tools:steel_pick,base_tools:steel_axe,base_tools:steel_shovel
 
 # Whether the TNT mod should be enabled.
 #enable_tnt = <true in singleplayer, false in multiplayer>
