--- a/mods/doors/doors_api/mod.conf
+++ b/mods/doors/doors_api/mod.conf
@@ -1,4 +1,4 @@
 name = doors_api
 description = Minebase mod: Doors API
-depends = tree_sounds, base, permissions_api
+depends = tree_sounds, permissions_api
 optional_depends = screwdrivers
