--- a/mods/ores/ores_api/mod.conf
+++ b/mods/ores/ores_api/mod.conf
@@ -1,3 +1,3 @@
 name = ores_api
 description = Minebase mod: Ores API
-depends = base, earth_api, base_earth
+depends = craft, earth_api, base_earth
