API, seats I continued to describe the API. Seats was renamed to Seats API and put into a modpack called seats.

--- a/mods/mounts/mounts_api/mod.conf
+++ b/mods/mounts/mounts_api/mod.conf
@@ -1,4 +1,4 @@
 name = mounts_api
 description = Minebase Mod: Mounts API
-depends = players_api, rand, seats
+depends = players_api, rand, seats_api
 
