--- a/mods/lights/lights_api/mod.conf
+++ b/mods/lights/lights_api/mod.conf
@@ -1,3 +1,3 @@
 name = lights_api
 description = Minebase mod: Lights API
-depends = liquids_api, tree_sounds
+depends = liquids_api, tree_sounds, boolean
