--- a/mods/doors/doors_api/mod.conf
+++ b/mods/doors/doors_api/mod.conf
@@ -1,4 +1,4 @@
 name = doors_api
 description = Minebase mod: Doors API
 depends = tree_sounds, permissions_api, boolean
-optional_depends = screwdrivers
+optional_depends = base_screwdrivers
