Central Message, sfInv Buttons, license Central Message is used now to display messages previously send via the chat. I added sfInv Buttons by Wuzzy. I added the license to Central Message and sfInv Buttons.

--- a/mods/doors/doors_api/mod.conf
+++ b/mods/doors/doors_api/mod.conf
@@ -1,4 +1,4 @@
 name = doors_api
 description = Minebase mod: Doors API
-depends = tree_sounds, permissions_api, boolean
+depends = tree_sounds, permissions_api, boolean, central_message
 optional_depends = base_screwdrivers
