--- a/mods/trees/trees_api/mod.conf
+++ b/mods/trees/trees_api/mod.conf
@@ -1,3 +1,3 @@
 name = trees_api
 description = Minebase mod: Trees API
-depends = base_biomes, biomes_api, base_sounds, rand
+depends = base_biomes, biomes_api, base_sounds, rand, central_message
