--- a/mods/beds/beds_api/mod.conf
+++ b/mods/beds/beds_api/mod.conf
@@ -1,3 +1,3 @@
 name = beds_api
 description = Minebase mod: Beds API
-depends = wool, tree_sounds, rand, t4b
+depends = wool, tree_sounds, rand, t4b, central_message
