--- a/mods/central_message/mod.conf
+++ b/mods/central_message/mod.conf
@@ -1,2 +1,2 @@
 name = central_message
-description = Simple API to show messages to the center of the screen to players.
+description = Minebase mod: Central Message - Simple API to show messages to the center of the screen to players.
