--- a/mods/containers/containers_api/mod.conf
+++ b/mods/containers/containers_api/mod.conf
@@ -1,3 +1,3 @@
 name = containers_api
 description = Minebase mod: Containers API
-depends = tree_sounds, formspecs, permissions_api, inv_utils
+depends = tree_sounds, formspecs, permissions_api, inv_utils, central_message
